syntax = "proto3";

package meshtrade.iam.api_user.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/meshtrade/api/go/iam/api_user/v1;api_user_v1";
option java_package = "co.meshtrade.api.iam.api_user.v1";

/*
   Represents API credentials used for authentication with the Mesh API.

   API credentials consist of an API key for authentication and a group
   identifier that specifies the organizational context for API operations.
   The group field must be in the format groups/{group_id} where group_id
   is the unique identifier of the owning group.
*/
message APICredentials {
  /*
     The API key used for x-api-key header authentication.
     This should be kept secure and never exposed in logs or version control.
     Required field.
  */
  string api_key = 1 [(buf.validate.field) = {
    string: {
      len: 43
      pattern: "^[A-Za-z0-9_-]{43}$"
    }
    cel: {
      id: "api_key.required"
      message: "api_key is required and must be exactly 43 characters (base64 URL-safe encoded)"
      expression: "size(this) == 43"
    }
    cel: {
      id: "api_key.format"
      message: "api_key must be base64 URL-safe encoded (43 characters, alphanumeric plus _ and -)"
      expression: "this.matches('^[A-Za-z0-9_-]{43}$')"
    }
  }];

  /*
     The group resource name in the format groups/{group_id}.
     This identifies the organizational context for API operations and
     is used for authorization and resource scoping.
     Required field with strict format validation.
  */
  string group = 2 [(buf.validate.field) = {
    string: {
      len: 33
      pattern: "^groups/[0-9A-Z]{26}$"
    }
    cel: {
      id: "group.required"
      message: "group is required and must be in format groups/{ulid}"
      expression: "size(this) == 33"
    }
    cel: {
      id: "group.format"
      message: "group must be in format groups/{ulid} where ulid is a 26-character ULID (uppercase alphanumeric)"
      expression: "this.matches('^groups/[0-9A-Z]{26}$')"
    }
  }];
}
